Add slack dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ readme = "README.md"
 requires-python = ">=3.8.0"
 dynamic = ["version"]
 
+dependencies = [
+    "slack-sdk",
+]
+
 license = {text = "BSD-3-Clause"}
 
 classifiers = [
